# ThermoTwin-3D

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: config.yaml
data/: README.md
docs/: architecture.md  baselines.md  block2_redesign.md  compute.md  data_inventory.md  datasets.md  experiment-plan.md  experiments.md  thesis.md
env/: environment.yml  requirements.txt
experiments/: README.md
notebooks/: README.md
presentations/: thermotwin_aic.tex
results/: README.md  block1_ablations.json  block1_ablations.md  block1_benchmark.json  block1_benchmark.md  block1_ood.json  block1_ood.md  block2_benchmark.json  block2_benchmark.md  block2_doe_benchmark.json  block2_doe_benchmark.md  block2_hard_benchmark.json  block2_hard_benchmark.md  block2_hard_phase0.json  block2_hard_phase0.md  block2_irreg_benchmark.json  block2_irreg_benchmark.md  block2_irreg_ops_benchmark.json  block2_irreg_ops_benchmark.md  block2_realcg_benchmark.json  block2_realcg_benchmark.md  block2_realcg_lod3_benchmark.json  block2_realcg_lod3_benchmark.md  block2_realcg_phase0.json  block2_realcg_phase0.md  identifiability_box.json  identifiability_hard.json  identifiability_realcg.json  identifiability_realcg_lod3.json  inverse_box.json  inverse_hard.json  inverse_realcg.json  inverse_realcg_lod3.json  iso10211_case2_validation.json  iso10211_validation.json  solver_crosscheck.json  unified_eval.json  unified_eval.md
scripts/: ablate.py  analyse_thermal_sample.py  analyze_identifiability.py  benchmark.py  benchmark_bl.py  benchmark_block2.py  benchmark_inverse.py  benchmark_whno.py  demo_citygml_featurise.py  download_data.py  download_external_datasets.sh  eval_tbbr.py  eval_thermoscenes.py  eval_tum2twin_tir.py  eval_twin_houses.py  evaluate.py  (+16 more)
(+150 files in other folders)
